syntax = "proto3";

option csharp_namespace = "GrpcDADTKV";

package dadtkv;

service DADTKV {
  rpc TxSubmit (TxSubmitRequest) returns (TxSubmitReply);
  rpc Status (Empty) returns (Empty);
}

message TxSubmitRequest {
  string client = 1;
  repeated string reads = 2;
  repeated DadInt writes = 3;
}

message TxSubmitReply {
  repeated DadInt result = 1;
}

message DadInt {
  string key = 1;
  int64 value = 2;
}

message Empty {}